repositioning packages